review v_bpd_winning_transaction
